# pycorewar

./: .gitignore  README.md  benchmark  build.py  compile.sh  optimizer  pyproject.toml  setup.cfg  setup.py  test_import.py  testsuite
Corewar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Test/: BenchmarkingMARS88.py  Instruction88.py
corewar/: __init__.py
examples/: dodo_evolver
src/: Benchmarkingmodule.c  Optimizingmodule.c  Redcodemodule.c
