[metadata]
name = Corewar
version = 0.2.0
description = A fast MARS (Memory Array Redcode Simulator) for debugging and benchmarking
author = Jens Gutzeit
author_email = jens@jgutzeit.de
license = GPL-2.0-or-later
license_file = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
url = http://corewars.jgutzeit.de/pycorewar/index.en.html
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Operating System :: Unix
    Topic :: Simulation
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    examples
    custom_build
